--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,7 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px 10px;
 }
 
 .logo {
@@ -9,6 +10,8 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-content: center;
+  align-items: center;  
 }
 
 ul {
@@ -23,3 +26,19 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.header {
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+  
+}
+
